--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -40,4 +40,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
+        uses: golangci/golangci-lint-action@v6
+        with:
+          version: latest
